test/visibility/private/uses/publicNoBleed.good
publicNoBleed.chpl:10: In function 'main':
publicNoBleed.chpl:13: error: 'b' undeclared (first use this function)
